--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
   },
   "homepage": "https://openwpclub.com",
   "dependencies": {
+    "@astrojs/rss": "^4.0.15",
     "@astrojs/sitemap": "^3.7.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.17.2",
     "marked": "^17.0.2",
+    "sanitize-html": "^2.17.1",
     "tailwindcss": "^4.1.18"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.16.0",
     "vitest": "^4.0.18"
   }
 }
